# hyprsets

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
packaging/: README.dist.md  hyprsets.desktop  install.sh  sample-worksets.toml
scripts/: extract_changelog_section.py  install-latest.sh  package.sh
src/: config.rs  main.rs  run.rs  state.rs
src/run/: actions_layout.rs  actions_workspace.rs  lock.rs  util.rs
src/ui/: editor.rs  home.rs
src/ui/editor/: actions.rs  events.rs  layout.rs  persistence.rs  render.rs
src/ui/home/: actions.rs  actions_selection.rs  actions_tabs.rs  actions_worksets.rs  events.rs  render.rs  tabs.rs
