[package]
name = "hyprsets"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
hyprland = "0.4.0-beta.3"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
unicode-width = "0.1"
rand = "0.8"
fs2 = "0.4"
